[metadata]
name = serverless-quiz-app
version = 0.0.1
url = localstack.cloud
author = LocalStack Team
author_email = info@localstack.cloud
description = LocalStack Quiz App
license = Proprietary
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary License
    Topic :: Software Development :: Testing

[options]
zip_safe = False
packages = find_namespace:
install_requires =
    localstack
    requests
    boto3
    pytest
    localstack-sdk-python
    awscli-local
